# programming_party

./: .gitignore  README.md  prepare_frank_env_gnu.sh  prepare_frank_env_intel.sh
eric/: CMakeLists.txt  callgrind_example.md  configure_pg.sh  constants.hpp  constants.py  diag.cpp  molecule.cpp  molecule.hpp  molecule.py  periodic_table.py  utils.cpp  utils.hpp  utils.py
eric/cphf_dipole_polarizability/: cphf_dipole_polarizability.py  python_log2  run_python.sh
eric/cphf_dipole_polarizability/industrial_quantum_packages/: dalton.h2o_sto3g.abalnr.dal  dalton.h2o_sto3g.abalnr.out  dalton.h2o_sto3g.response.out  dalton.h2o_sto3g.response_0.02_rpa_singlet.dal  dalton.h2o_sto3g.response_0.02_rpa_singlet.out  dalton.h2o_sto3g.response_0.02_tda_singlet.dal  dalton.h2o_sto3g.response_0.02_tda_singlet.out  dalton.h2o_sto3g.response_0.06_rpa_singlet.dal  dalton.h2o_sto3g.response_0.06_rpa_singlet.out  dalton.h2o_sto3g.response_0.06_tda_singlet.dal  dalton.h2o_sto3g.response_0.06_tda_singlet.out  dalton.h2o_sto3g.response_0.10_rpa_singlet.dal  dalton.h2o_sto3g.response_0.10_rpa_singlet.out  dalton.h2o_sto3g.response_0.10_tda_singlet.dal  dalton.h2o_sto3g.response_0.10_tda_singlet.out  dalton.h2o_sto3g.response_rpa_triplet.out  dalton.h2o_sto3g.response_static_rpa_singlet.dal  dalton.h2o_sto3g.response_static_rpa_singlet.out  dalton.h2o_sto3g.response_static_rpa_singlet_residues.dal  dalton.h2o_sto3g.response_static_rpa_singlet_residues.out  dalton.h2o_sto3g.response_static_rpa_triplet.dal  dalton.h2o_sto3g.response_static_tda_singlet.dal  dalton.h2o_sto3g.response_static_tda_singlet.out  dalton.h2o_sto3g.response_static_tda_triplet.dal  dalton.h2o_sto3g.response_static_tda_triplet.out  dalton.h2o_sto3g.static_rpa_singlet.dal  dalton.h2o_sto3g.static_rpa_singlet.out  qchem.git_sto3g.rpa_singlet.in  qchem.git_sto3g.rpa_singlet.out  qchem.h2o_sto3g.setman_rpa.in  qchem.h2o_sto3g.setman_rpa.out
eric/function_pointers/: Makefile  function_pointers.c  function_pointers.py  stack_overflow.c
eric/project12/: davidson.py  project12.py  run_python.sh  test_project12.py
eric/project12/industrial_quantum_packages/: dalton_h2o_sto3g_cis_singlet.dal  dalton_h2o_sto3g_cis_singlet.out  dalton_h2o_sto3g_cis_triplet.dal  dalton_h2o_sto3g_cis_triplet.out  dalton_h2o_sto3g_rpa_singlet.dal  dalton_h2o_sto3g_rpa_singlet.out  dalton_h2o_sto3g_rpa_singlet_e2.dal  dalton_h2o_sto3g_rpa_singlet_e2.out  dalton_h2o_sto3g_rpa_triplet.dal  dalton_h2o_sto3g_rpa_triplet.out  h2o.dalmol  h2o.xyz  qchem.h2o_sto3g_cis.in  qchem.h2o_sto3g_cis.out  qchem.h2o_sto3g_rpa.in  qchem.h2o_sto3g_rpa.out
eric/project3/: molecule.py  project3.cpp  project3.out  project3.py  project3_py_gwh.out  project3_py_hcore.out  run_python.sh
eric/project3/industrial_quantum_packages/: ch4_bohr.xyz  dalton.ch4_sto3g.dal  dalton.ch4_sto3g.out  dalton.h2o_sto3g.dal  dalton.h2o_sto3g.out  h2o_bohr.xyz  orca.h2o_sto3g.in  orca.h2o_sto3g.out  qchem.ch4_sto3g.in  qchem.ch4_sto3g.out  qchem.h2o_dz.in  qchem.h2o_dz.out  qchem.h2o_sto3g.in  qchem.h2o_sto3g.out
eric/project4/: project4.py  run_python.sh
eric/project5/: project5.py  run_python.sh
eric/project8/: project8.cpp  project8.py  project8af.cpp  run_python.sh
eric/project8/doc/: diis.bib  diis.tex  diis_doc.tex  preamble.tex
